# midifile

./: .gitignore  CMakeLists.txt
include/: MidiMessage.h
src/: MidiMessage.cpp
